@@ -16,6 +16,9 @@ Library
 Tools/Demos
 -----------
 
+- Issue #20143: The line numbers reported in Argument Clinic errors are
+  now more accurate.
+
 - Issue #20142: Py_buffer variables generated by Argument Clinic are now
   initialized with a default value.
 
